[tool.poetry]
name = "chainball-server"
version = "0.1.0"
description = "The Chainball Central Server"
authors = ["Bruno Morais <brunosmmm@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
Django = "3.2.13"
django-annoying = "0.10.6"
django-cors-middleware = "1.5.0"
django-oauth-toolkit = "1.3.2"
djangorestframework = "3.11.2"
djangorestframework-api-key = "2.0.0"
gunicorn = "19.9.0"
Pillow = "^8.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
